@@ -1,6 +1,7 @@
 2013-01-17  Alexander V. Lukyanov <lavv17f@gmail.com>
 
 	* Http.cc: allow UTC along with GMT in http timestamps.
+	* Http.cc: fixed Content-Length handling after PROPFIND.
 
 2013-01-16  Alexander V. Lukyanov <lavv17f@gmail.com>
 
